# faer_benchmark

./: Cargo.toml  README.md  heat2d_10.mtx  heat2d_20.mtx  heat2d_30.mtx  heat2d_5.mtx  robertson_ode_10.mtx  robertson_ode_100.mtx  robertson_ode_1000.mtx
benches/: solve.rs
src/: lib.rs
