[package]
name = "faer_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
faer = "0.18.2"
nalgebra-sparse = { version="0.10.0", features=["io"] }
suitesparse-sys = { git = "https://github.com/martinjrobins/suitesparse-sys" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "solve"
harness = false